# wang_landau_visualization

./: Cargo.toml  README.md
src/: app.rs  coins.rs  main.rs
